Fixes layout problems on mobile and very large screens

--- a/css/client-page.css
+++ b/css/client-page.css
@@ -1,28 +1,35 @@
 .container {
-  max-width: calc(100vw - 200px);
+  width: calc(100% - 100px);
+  max-width: calc(1600px - 100px);
   margin: auto;
   position: relative;
 }
 
 @media only screen and (max-width: 768px) {
   .container {
-    max-width: calc(100vw - 20px);
-    margin: auto;
-    position: relative;
+    width: calc(100% - 50px);
   }
-
+/*
   iframe.responsive-iframe {
     width:200%;
     height:200%;
     transform: scale(.5);
     transform-origin: top left;
     border-radius: 32px;
-  }
+  } */
 }
 
+.header-logo {
+  width: 12%;
+  margin: 0 auto;
+}
+.header-logo img {
+  width:100%;
+  display: block;
+}
 
 body{
-  background-image: linear-gradient(#ED5E50, #F48658, #DB4A48);
+  background: linear-gradient(180deg, #ED5E50 0%, #F48658 27.79%, #DB4A48 100%);
 }
 
 .z1 {
@@ -36,7 +43,7 @@ body{
   right:0;
   width: 100%;
   margin: 0 auto;
-  max-width: 1600px;
+  max-width: 2000px;
 }
 
 .image-container img.header-image {
@@ -45,17 +52,13 @@ body{
 }
 
 .framing-container {
-  width: 65vw;
-  max-width:1200px;
-  margin: 1vw auto 10vw;
-}
-
-
-@media only screen and (max-width: 768px) {
-  .framing-container {
-    width: 90vw;
-    margin: 1vw auto 10vw;
-  }
+  width: 100%;
+  margin: 0 auto;
+  margin-top: -4%;
+  padding: 8%;
+  background: url("../assets/header-img.png");
+  background-size:contain;
+  background-repeat: no-repeat;
 }
 
 .top-page{
